Fixed modal window overflow on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -1733,7 +1733,6 @@ a.lead {
   display: none;
   width: 100%;
   height: 100vh;
-  overflow-y: auto;
 
   background-color: rgba(0, 0, 0, 0.3);
 }
@@ -1741,10 +1740,12 @@ a.lead {
 .application-form {
   display: block;
   width: 477px;
+  max-height: 100vh;
   padding: 16px 24px 27px 24px;
 
   border-radius: 10px;
   transform: translateX(2px);
+  overflow-y: auto;
 }
 
 .application-form h2 {
